[package]
name = "tuta_poll"
version = "0.1.0"
description = "tuta poll library to fetch new mails and possibly relay them"
edition = "2021"
repository = "https://github.com/LarsHaalck/tuta_poll"

[dependencies]
aes = "0.8.3"
anyhow = "1.0.75"
base64 = "0.21.5"
cbc = {version = "0.1.2", features = ["std"] }
hmac = "0.12.1"
rsa = "0.9.6"
lz4_flex = "0.11.1"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tracing = "0.1.40"
url = "2.4.1"
bcrypt = "0.15.0"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
num_enum = "0.7.1"
num-traits = "0.2.17"
tokio = { version = "1.35.0", features = ["rt", "macros"] }

[dev-dependencies]
rpassword = "7.3.1"
tracing-subscriber = "0.3.18"
